# aula

./: pyproject.toml
config/: settings.py
