[project]
name = "aula"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "manuhostin", email = "hostimmanu@gmail.com"},
]
dependencies = ["django>=5.1.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
